added upnp section; started udp

--- a/notes/image-credits.adoc
+++ b/notes/image-credits.adoc
@@ -27,3 +27,9 @@ https://en.wikipedia.org/wiki/Universal_Plug_and_Play
 
 samsung allshare
 https://www.lifewire.com/how-samsung-allshare-simplifies-media-streaming-1847358
+
+wiki john gage
+https://en.wikipedia.org/wiki/John_Gage
+
+wiki quic
+https://en.wikipedia.org/wiki/QUIC
